primeira versão do app de estudo do ionic3

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Sobre
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  Teste de página sobre
 </ion-content>
